--- a/appeleva/src/app/team/components/header.css
+++ b/appeleva/src/app/team/components/header.css
@@ -8,7 +8,7 @@
   );
   margin: 0;
   height: 5.5dvh;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
   z-index: 10;
 }
@@ -19,17 +19,6 @@
   justify-content: center;
   align-items: center;
   height: 5dvh;
-}
-
-.eleva {
-  margin-right: 8px;
-  font-family: var(--main-text-font);
-  color: white;
-  font-size: 1rem;
-  width: 164px;
-}
-.logo-img {
-  max-height: 29px;
 }
 
 /*--------------------Menu Hamburguesa--------------------*/
@@ -69,8 +58,7 @@ li {
 }
 .brand-container {
 }
-.eleva {
-}
+
 .logo-img {
 }
 .labe-hamburguesa {
