--- a/appeleva/src/app/globals.css
+++ b/appeleva/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -22,6 +23,8 @@ body {
 
 @layer utilities {
   .text-balance {
-    text-wrap: balance;
+    text-wr
+    ap: balance;
   }
-}
+    
+}*/
